Servlets and others2

--- a/src/main/webapp/webPart/WEB-INF/views/authorization.html
+++ b/src/main/webapp/webPart/WEB-INF/views/authorization.html
@@ -20,6 +20,6 @@
     <input type="submit" value="Отправить">
     <br>
 </form>
-<button onclick="location.href='mainMenu.html'">Войти как гость</button>
+<button onclick="location.href='/Library/webPart/WEB-INF/views/mainMenu.html'">Войти как гость</button>
 </body>
 </html>
