--- a/src/main/resources/templates/account/updateAccount.html
+++ b/src/main/resources/templates/account/updateAccount.html
@@ -23,9 +23,14 @@
         <input type="text" name="bookId">
     </label>
     <br />
-    Return Date (date format: yyyy.MM.dd):
+    Receipt Date:
     <label>
-        <input type="text" name="date">
+        <input type="date" name="date">
+    </label>
+    <br />
+    Return Date:
+    <label>
+        <input type="date" name="date">
     </label>
     <br />
     Status:
