--- a/src/main/resources/templates/menu/mainMenu.html
+++ b/src/main/resources/templates/menu/mainMenu.html
@@ -11,11 +11,11 @@
 
 <div>       <!-- content -->
     <div>    <!-- buttons holder -->
-        <button onclick="location.href='dataEditing.html'">Редактирование данных</button>
+        <button onclick="location.href='/dataEditing.html'">Редактирование данных</button>
         <br>
         <button onclick="location.href='/Books/returnAllBooks'">Показать все доступные книги </button>
         <br>
-        <button onclick="location.href='books/howToSearch.html'">Найти книгу </button>
+        <button onclick="location.href='../../books/howToSearch.html'">Найти книгу </button>
         <br>
         <button onclick="location.href='clientCheck.html'">Выдать книгу </button>
         <br>
